Made header have non fixed position so it doesn't take up too much of screen while scrolling in mobile screen mode

--- a/Certifications/Personal_Portfolio/styles.css
+++ b/Certifications/Personal_Portfolio/styles.css
@@ -295,6 +295,15 @@ footer svg {
 }
 
 @media (max-width: 1100px) {
+
+    header {
+        position: initial;
+    }
+
+    nav ul {
+        padding: 0.5rem 0;
+    }
+
     nav li {
         display: block;
         padding: 0;
